syntax="proto3";

package greeting;

option go_package="./";

message EnterMessage {
  string name = 1;
}

message ExitMessage {
  string name = 1 ;
}

message GreetMessage {
  string name = 1;
  string time = 2;
}

service Greeter {
  rpc Enter(EnterMessage) returns (GreetMessage) {};
  rpc Exit(ExitMessage) returns (GreetMessage) {};
}